resources/css/style.css
/* Basic Setup 
Orange -  rgb(255, 157, 0); Color*/
/******************************************************************** Columns and Row for initial setup */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    
    background-color: #fff;
    color: rgb(255, 157, 0);
    font-family: 'Josefin Sans', sans-serif;
    font-size: 20px;
    font-weight: 100;
    text-rendering: optimizeLegibility;
}

.row {
    
    max-width: 1400px;
    margin:0 auto;
    color:black;
}
.col{
    display:block;
    float:left;
    margin: 1% 0 1% 1.0%;
    
}
.clearfix {zoom:1}
.clearfix:after
{
    content: '.';
    clear:both;
    display:block;
    height:0;
    visibility: hidden;
}

section {
  padding: 80px 0;   
}
.box{
    padding:1%;
}
/* SECTION ******************************************************************************************************************************************* */
.section-features{
    
    margin:50px auto;
    
}


/* MEALS SECTION *****************************************************************************************************************************************/
.meals-showcase{
    max-width: 100%;
}
.meals-showcase li{
    display:block;
    float:left;
    width: 25%;
    
}
.meal-photo{
    display:100%;
    margin:0;
    overflow: hidden;
    background-color: #000;
    
    
}
.meal-photo img{
    width:100%;
    height:auto;
    transform:scale(1.15);
    transition: transform 0.5s, opacity 0.5s;
    
}
.meal-photo img:hover{
    transform: scale(1.03);
}
.section-images{
    margin-top:-150px;
    margin-bottom: -100px;
}


/* App store section ************************************************************************************************************************************************************************************************** */
 
.section-steps{
    margin-top:-px;
    background:linear-gradient(rgba(0, 0, 0, 0.07),rgba(0, 0, 0, 0.12));
}
.steps-box:first-child{
    text-align:right;
    padding-right:3%;
    margin-top:30px;
}
.steps-box:last-child{
    padding-left:3%;
    margin-top:70px;
}
    
.app-screen{
    width:40%;
}
.work-step{
    margin-bottom:50px;
}
.work-step div{
    color:rgb(255, 157, 0);
    display:inline-block;
    border: 2px solid rgb(255, 157, 0);
    border-radius: 50%;
    height:50px;
    width:50px;
    text-align:center;
    font-size: 150%;
    padding:10px;
    float:left;
    margin-right:15px;
}

.btn-app img{
    height:50px;
    width:auto;
    margin-right:10px;
}
/*HEADER ---------------------------------*********************************************************************************************************************************************----------------- */
header{
    background-image:linear-gradient(rgba(0, 0, 0, 0.79),rgba(0, 0, 0, 0.51)),url(img/hero.jpg);
    background-size: cover;
    height: 100vh;
    background-position: center;
    background-attachment: fixed;
    
}
h1,h2,h3{
     font-weight: :300;
     text-transform:uppercase;
     letter-spacing: 1px;
    
}

h1{
    margin-top:0;
    margin-bottom: :20px;
    font-size:200%;
    font-weight:30;
    text-transform: uppercase;
    letter-spacing: 1px;
    word-spacing: 4px;
    color:rgba(255, 255, 255, 0.85);
    
}
h2{
    text-transform: uppercase;
    letter-spacing: 5px;
    margin-top:0;
    margin-bottom: 30px;
    word-spacing: 4px;
    text-align: center;
 }
h2:after {
    display:block;
    height:2px;
    background-color: rgb(255, 157, 0);
    content:" ";
    margin:0 auto;
    width:100px;
    margin-top:30px;
    
}
.hero-text-box{
    position:absolute;
    width: 1140px;
    top: 50%;
    left: 70%;
    transform: translate(-50%,-50%)
}
h3{
    font-size: 110%;
    padding:3.0%;
    border-right: 3px solid rgb(255, 157, 0) ;
    
}
p{
    padding: 1.8%;
}
.borders{
     border-right: 3px solid rgb(255, 157, 0) ;
     border-right:center;
     height:170px;
}
/* PARAGRAPHS *****************************************************************************************************************************************/

.long-copy{
     line-height:145%;
     width:70%;
     margin:0 15%;
    
}

.box{
    padding:1%;
   
}
/* ICONS *********************************************************************************************************************************************/

.icon-big{
    font-size:300%;
    display:inline-block;
    color: rgb(255, 157, 0) ;
    margin-bottom: 10px;
    
}
.icon-small{
    display:inline-block;
    width:30px;
    text-align: center;
    color:rgb(255, 157, 0) ;
    line-height: 120%;
    vertical-align: middle;
    margin-top:-2px;
}
.ion-ios-close-empty{
    color:red; 
    
}
/* secrets to align text and icons 
/* NAVAGATION PART OF HEADER *********************************************************************** */

.logo{
    margin-bottom:0px;
    float:left;
    height:120px;
    width:300px;
   

    
}
.main-nav{
    float:right;
    list-style: none;
    margin-top:30px;
}

.main-nav li{
    display:inline-block;
    margin:30px;
}
.main-nav li a:link,
.main-nav li a:visited{
    color:rgba(255, 249, 249, 0.9);
    text-decoration: none;
    text-transform: uppercase;
    font-size:90%;
    transition: border-bottom 0.5s;
    padding:8px 0px;
}
.main-nav li a:hover,
.main-nav li a:active{
    border-bottom: 2px solid  rgb(255, 157, 0);

}
/* Buttons Design ************************************************************************************** */

.btn:link,
.btn:visited,
input[type=submit]
{
    display:inline-block;
    padding: 15px 30px;
    text-decoration:none;
    border-radius: 300px;
    color:rgba(255, 255, 255, 0.82);
    transition:background-color 0.4s,border 0.4s,color 0.4s;
}

.btn-full:link,
.btn-full:visited
{
    background-color: rgb(255, 157, 0);
    border: 1px solid rgb(255, 157, 0);
    margin-right:15px;
}
.btn-ghost:link,
.btn-ghost:visited{
    border: 1px solid  rgb(255, 157, 0);
    color:rgb(255, 157, 0);
}
.btn:hover,
.btn:active,
input[type=submit]:hover,
input[type=submit]:active   
{
    
    background-color:rgba(255, 157, 0, 0.57);
    
    
}
/* Section Cities Design ************************************************************************************** */

.section-cities img{
    
  max-width: 100%;
  margin-left:10px;
    
    
}
.section-cities h3{

    height: auto;
    font:300%;
    white-space: nowrap;
    border: none;
    margin-top:-2px;
}
.city-feature{
    margin-top:10px;
}
.city-feature a:link,
.city-feature a:active{
    text-decoration: none;
    border-bottom: 2px solid rgba(255, 192, 192, 0.37);
    transition: border-bottom 0.2s, color 0.2s;
  }

.city-feature a:hover,
.city-feature a:active{
    color:lightblue;
    border-bottom: 2px solid transparent;
    
}


/* Section Testimonials ************************************************************************************** */
.section-testimonials{
    background-image:linear-gradient(rgba(0, 0, 0, 0.88),rgba(0, 0, 0, 0.46)),url(img/back-customers.jpg);
    background-size: cover;
    background-attachment: fixed;
}
.user-testimonials{
    color:rgba(255, 255, 255, 0.88);
}
blockquote{
    padding:2%;
    line-height: 145%;
    font-style: italic;
    position: relative;
    margin-top:40px;
}
cite{
    font-size:90%;
    margin-top: 25px;
    display:block;
}

blockquote:before,
blockquote:after
{

    content:"\201C";
    
    
}
cite img{
    border-radius: 50%;
    height: 50px;
    margin-right: 10px;
    vertical-align:middle;
}

/* Customer Testimonials **************************************************************************************************** */
.section-plans{
     background:linear-gradient(rgba(0, 0, 0, 0.07),rgba(0, 0, 0, 0.12));
    
}
.plan-box{
    background-color: white;
    border-radius: 5px;
    width:80%;
    margin-left:15%;
    box-shadow: 0 2px 2px #fff;
    
}
.plan-box div{
    padding: 15px;
    border-bottom: 1px solid rgb(255, 157, 0);
    border-top-left-radius:5px;
    border-top-right-radius:5px;
}
.plan-price{
    font-size: 300%;
    margin-bottom: 10px;
    color: rgb(255, 157, 0);
    font-weight: 100;

}
.plan-price span{
    font-size:30%;
}
.plan-price-permeal{
   font-size:90%; 
}
.plan-box ul li{
    padding: 5px 0;
    text-decoration: none;
    list-style: none;
}
.plan-box div:first-child{
background-color:aliceblue;
 }
.plan-box div:last-child{
    text-align: center;
    border-bottom: none;
}

/* Form **************************************************************************************************** */

.section-form h2{
    width: 1140px;
    text-align: center;
    margin-bottom:50px;
   
}
.contact-form{
    margin-left:20%;
    
   
        
}
input[type=text], 
input[type=email],
.find-us,
select
 {
    width:80%;
    padding: 7px;
    margin-top: -30px;
    border: 1px solid grey;
    border-top-left-radius:10px;
    
}
textarea{
    width:80%;
    height:100px;
    padding:7px;
}

input[type=submit]{
    color:orange;
    border: 2px solid rgb(255, 157, 0);
}
input[type=checkbox]{
    margin-bottom:10px 5px 10px 10px;
}

/* Footer ************************************************************************************************************************************ */

footer{
    background-color:dimgray;
    height:170px;
    font-size:90%;
}
.footer-nav{
    list-style: none;
    float: left;
    color:orange;
    width:1000px;
    margin-left:100px;
    margin-top:35px;
    
}
.social-icons{
     margin-top:15px;
    float:right;
    color:grey;
    margin-right:10px;
}
.footer-nav li,
.social-icons li{
    display:inline-block;
    margin-right: 1px;
    margin-left: 37px
}
footer a{
    color:grey;;
}
footer a:hover,
footer a:active
{
    color: rgb(255, 157, 0);
    transition: color 0.8s;
}
.footer-nav li:last-child,
.social-icons li:last-child{
    margin-right:0;
}
.footer-nav li a:link,
.footer-nav li a:visited,
.social-icons li i:link,
.social-icons li i:visited {
    text-decoration: none;
    border:0;

}
.social-icons li i{
    transition:color 0.5s;
}


.ion-social-facebook:hover{
    color:#3b5998;
    
}
.ion-social-twitter:hover{
    color:#00aced;
}
.ion-social-googleplus:hover{
    color:#dd4b39;

}
.ion-social-instagram:hover{
    color:#517fa4;

}
/* When you Have an A href + an I class , you must just label as .social-icons li i REFER TO line 511*/ 

.copyright{
    color:grey;
    margin-left:110px;
    margin-top:100px;
    width:1000px;
    text-align: center;
    font-size:80%;
    text-transform:capitalize;
    
}

